--- a/style/style.scss
+++ b/style/style.scss
@@ -1,17 +1,337 @@
 /*Remove margin, padding*/
-body{
+body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
+
 /*Remove margin, padding*/
-*{
+* {
   padding: 0;
   margin: 0;
 }
-/*Remove decor and color*/
-a{
+
+/*Remove decoration and make color "inherit"*/
+a {
   text-decoration: none;
   color: inherit;
+}
+
+/*Задаем макс. ширину и центрируем*/
+.container {
+  max-width: 1130px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
+/*Начальные свойства grid*/
+.grid {
+  display: grid;
+  /*Делит на 50%*/
+  &-col6 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  /*Делит на 33,33333%*/
+  &-col4 {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  /*Задает отступ между grid в 60px*/
+  &-gap {
+    grid-column-gap: 60px;
+  }
+
+}
+
+.d-flex_center_column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Начало секции preview*/
+.preview {
+  padding: 7px 0;
+  max-height: 28px;
+  text-align: center;
+  background: #343434;
+  /*Текст внутрии секции*/
+  &__title {
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.5px;
+    color: #FFFFFF;
+  }
+}
+
+/*Класс hero - position: relative*/
+.hero {
+  background: url("../images/hero.png") no-repeat center/cover #fff;
+  height: calc(100vh - 303px);
+  padding: 30px 0 273px;
+  position: relative;
+  /*Класс __container удерживает*/
+  &__container {
+    max-width: 1300px;
+    padding: 0 10px;
+    margin: 0 auto;
+  }
+
+  /*Свойства блока __shop-part - position: relative;*/
+  &__shop-part {
+    position: relative;
+    max-height: 60px;
+    padding: 16px 0 20px;
+  }
+
+  /*Свойства ссылок внутри блока __shop-part */
+  &__link {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+    color: #343434;
+  }
+
+  /*Свойтсва внешного отступа __link */
+  &_right {
+    margin-right: 62px;
+  }
+
+  /*Свойтсва логотипа - position: absolute;*/
+  &__logo {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 172px;
+    font-weight: normal;
+    font-size: 45px;
+    line-height: 37px;
+    color: #747474;
+    text-align: center;
+  }
+
+  /*Доп. свойтсва внутри hero__logo*/
+  &__text-market {
+    font-size: 25px;
+    line-height: 30px;
+    font-weight: 300;
+  }
+
+  /*Свойтсва блока hero__info */
+  &__info {
+    margin-top: 144px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  /*Свойтсва hero__nav*/
+  &__nav {
+    display: block;
+    padding: 13px 27px;
+  }
+
+  /*Свойтсва hero__nav-link - &:not(:last-child)*/
+  &__nav-link {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 24px;
+    color: #2B2B2B;
+
+    &:not(:last-child) {
+      margin-right: 49px;
+    }
+  }
+
+  /*Свойтсва hero__title - &::after*/
+  &__title {
+    font-weight: bold;
+    font-size: 80px;
+    line-height: 90px;
+    letter-spacing: 1px;
+    color: #343434;
+    width: 600px;
+    text-align: center;
+    margin-top: 16px;
+    margin-bottom: 52px;
+
+    &::after {
+      content: "*";
+      font-weight: normal;
+      font-size: 80px;
+      line-height: 90px;
+      letter-spacing: 1px;
+      color: #DE470D;
+      margin-left: 15px;
+    }
+  }
+
+  /*Свойтсва hero__btn */
+  &__btn {
+    width: 240px;
+    height: 58px;
+    background: #FABAA0;
+    border-radius: 8px;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    color: #343434;
+    border: none;
+  }
+
+  /*Свойтсва hero__cards - position: absolute;*/
+  &__cards {
+    position: absolute;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    bottom: -106px;
+    background: #708D92;
+    padding: 20px;
+    width: 1110px;
+  }
+
+  /*Свойтсва hero__card*/
+  .hero__card {
+    height: 170px;
+    border: 1px solid #FFFFFF;
+    border-right: none;
+  }
+
+  /*Свойтсва hero__theme*/
+  &__theme {
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 34px;
+    letter-spacing: 0.5px;
+    color: #FFFFFF;
+    margin-bottom: 25px;
+  }
+
+  /*Свойтсва hero__desc*/
+  &__desc {
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 22px;
+    color: #FFFFFF;
+    width: 206px;
+    text-align: center;
+  }
+
+  /*Свойтсва hero__money*/
+  &__money {
+    font-weight: normal;
+    font-size: 45px;
+    line-height: 67px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
+
+  /*Свойтсва hero__donate*/
+  &__donate {
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 18px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #FBDCC5;
+  }
+
+  /*Свойтсва hero__sub - &-title*/
+  &__sub {
+    height: 85px;
+    border-bottom: 1px solid #FFFFFF;
+    border-right: 1px solid #FFFFFF;
+
+    &-title {
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 18px;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      color: #FFFFFF;
+    }
+  }
+}
+
+/*Класс about*/
+.about {
+  /*Свойства класса about */
+  text-align: center;
+  padding: 234px 0 60px;
+  background: #E5E5E5;
+
+  /*Свойства about__info-text*/
+  &__info-text {
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 18px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #747474;
+    margin-bottom: 18px;
+  }
+
+  /*Свойства about__info-subText*/
+  &__info-subText {
+    font-weight: bold;
+    font-size: 45px;
+    line-height: 34px;
+    color: #343434;
+  }
+
+  /*Свойства about__cards*/
+  &__cards {
+    margin-top: 62px;
+    padding: 0 20px;
+  }
+
+  /*Свойства about__card*/
+  &__card {
+    width: 295px;
+  }
+
+  /*Свойства about__title - &_change - &::before*/
+  &__title {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 30px;
+    color: #343434;
+    margin: 10px 0 14px;
+
+    &::before {
+      content: "*";
+      font-weight: normal;
+      font-size: 24px;
+      line-height: 30px;
+      color: #DE470D;
+    }
+
+    &_change {
+      width: 306px;
+    }
+  }
+
+  /*Свойства about__desc - &_change*/
+  &__desc {
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 22px;
+    color: #747474;
+    width: 241px;
+
+    &_change {
+      width: 249px;
+    }
+  }
 }
