--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,14 @@ body {
   margin: 0;
 }
 
+.col-6 {
+  width: 50%;
+}
+
+.row {
+  width: 100%;
+}
+
 /*Remove decoration and make color "inherit"*/
 a {
   text-decoration: none;
@@ -424,6 +432,117 @@ button {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+
+.fresh {
+  padding: 73px 0 60px;
+  /*Свойства fresh__col-6*/
+  /*Свойства fresh__fresh-title*/
+  /*Свойства fresh__btn_collection*/
+  /*Свойства fresh__col-6-right*/
+  /*Свойства fresh__fresh-desc*/
+  /*Свойства fresh__info-desc*/
+  /*Свойства fresh__col-6-right*/
+}
+.fresh__col-6 {
+  display: flex;
+}
+.fresh__fresh-title {
+  font-weight: bold;
+  font-size: 45px;
+  line-height: 45px;
+  text-align: center;
+  color: #343434;
+}
+.fresh__btn-collection {
+  background: #FBDCC5;
+  border-radius: 3px;
+  border: none;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 18px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #343434;
+  padding: 5px 8px 3px;
+  margin-bottom: 11px;
+  transition: 0.3s;
+}
+.fresh__btn-collection:hover {
+  background: #fab202;
+  border-radius: 3px;
+  border: none;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 18px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding: 5px 8px 3px;
+  margin-bottom: 11px;
+}
+.fresh__col-6-right {
+  padding-top: 240px;
+}
+.fresh__fresh-desc {
+  margin-bottom: 31px;
+}
+.fresh__info-desc {
+  margin-bottom: 14px;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 30px;
+  color: #343434;
+}
+.fresh__shop-2 {
+  display: flex;
+}
+.fresh__shop {
+  padding: 2px;
+  width: 93px;
+  text-align: center;
+  border-radius: 2px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #DE470D;
+  transition: 0.3s;
+}
+.fresh__shop:hover {
+  background: #0ef1f1;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #fa0303;
+}
+
+.toxin {
+  justify-content: center;
+  background: #F7F5F2;
+}
+.toxin__col-6-left {
+  padding-top: 226px;
+  margin-left: 270px;
+}
+.toxin__col-6-right {
+  padding-top: 60px;
+  padding-right: 239px;
+}
+.toxin__col-6 {
+  display: flex;
+  padding: 60px 0;
+  margin: 0 auto;
+}
+
+.celebraiting {
+  background: #F7F5F2;
+}
+.celebraiting__col-6-right {
+  padding-left: 88px;
 }
 
 /*# sourceMappingURL=style.css.map */
