added new pages, slide in about< hovers, links

--- a/style/reser.scss
+++ b/style/reser.scss
@@ -9,7 +9,7 @@
   &__link-part{
     position: relative;
     display: flex;
-    margin: 0 0 0 50px;
+    margin: 0 0 0 135px;
   }
   &__logo{
     left: -74px;
@@ -64,12 +64,13 @@
     line-height: 24px;
     color: #343434;
     transition: 0.6s;
+    padding: 2px;
     &:not(:last-child){
-      margin-right: 68px;
+      margin-right: 60px;
     }
     &:hover{
-      color: #fff;
-      background: #747474;
+      color: #ffffff;
+      background: #f37945;
       border-radius: 5px;
     }
   }
