--- a/style/about.css
+++ b/style/about.css
@@ -2,11 +2,14 @@
   height: calc(100vh - 200px);
   padding: 100px 0;
 }
-
 .about__desc_about {
   font-size: 18px;
   margin-top: 30px;
   width: 100%;
+}
+.about__desc_change1 {
+  font-size: 32px;
+  color: #8b3131;
 }
 
 /*# sourceMappingURL=about.css.map */
