--- a/style/about.scss
+++ b/style/about.scss
@@ -1,9 +1,16 @@
-.about__info{
-  height: calc(100vh - 200px);
-  padding: 100px 0;
-}
-.about__desc_about{
-  font-size: 18px;
-  margin-top: 30px;
-  width: 100%;
+
+.about {
+  &__info {
+    height: calc(100vh - 200px);
+    padding: 100px 0;
+  }
+  &__desc_about {
+    font-size: 18px;
+    margin-top: 30px;
+    width: 100%;
+  }
+  &__desc_change1{
+    font-size: 32px;
+    color: #8b3131;
+  }
 }
