--- a/style/reser.css
+++ b/style/reser.css
@@ -10,7 +10,7 @@
 .header__link-part {
   position: relative;
   display: flex;
-  margin: 0 0 0 50px;
+  margin: 0 0 0 135px;
 }
 .header__logo {
   left: -74px;
@@ -67,13 +67,14 @@
   line-height: 24px;
   color: #343434;
   transition: 0.6s;
+  padding: 2px;
 }
 .cards__links:not(:last-child) {
-  margin-right: 68px;
+  margin-right: 60px;
 }
 .cards__links:hover {
-  color: #fff;
-  background: #747474;
+  color: #ffffff;
+  background: #f37945;
   border-radius: 5px;
 }
 .cards__card {
