--- a/style/reser.css
+++ b/style/reser.css
@@ -92,6 +92,12 @@
   width: 100px;
   height: 30px;
   text-align: center;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+.cards__orange:hover {
+  background: #f6ae6d;
+  color: #fff;
 }
 .cards__img {
   padding: 0 10px;
