--- a/style/subPage/bags.scss
+++ b/style/subPage/bags.scss
@@ -1,5 +1,8 @@
 @import url("../slide/reset.css") screen;
 @import url("../slide/animation.css") screen;
+body{
+  background-color: #fff;
+}
 
 .bags {
   z-index: 0;
